--- a/index.html
+++ b/index.html
@@ -4,139 +4,160 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./main.css">
   <title>Олег Денисенко. Quiz-box</title>
 </head>
 <body>
-  <div class="wrapper"> 
-    <!-- Начало головы документа -->
-    <header class="header">
-      <a href="#" class="header__link link-main">
-        <img src="" alt="Логотип сайта" class="header__logo logo">
-      </a>
-      <nav class="header__menu menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__link">Главная</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Игры</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Отзывы</a>
-          </li>
-        </ul>
-      </nav>
-      <adress class="header__contacts contacts">
-        <a href="tel:+78007003030" class="contacts__phone-header phone">8 800 700 30 30</a>
-        <div class="contacts__workhours">
-          <p class="contacts__schedule">График работы</p>
-          <div class="contacts__week-schedule">
-            <img src="" alt="Рамка для времени работы" class="contacts__image">
-            <p class="contacts__workingdays">пн-вс: 09:00-20:00</p>
-            <p class="contacts__dinner">Обед: 14:00-14:30</p>
-          </div> 
+  <div class="wrapper main-page-wrapper">
+    <!-- Начало секции hero -->
+    <section class="hero">
+      <div class="container">
+        <!-- Начало головы документа -->
+        <header class="header">
+          <a href="/" class="header__link-main link-main">
+            <img src="/img/quiz-box.png" alt="Логотип сайта" class="link-main__logo logo">
+          </a>
+          <nav class="header__menu menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#" class="menu__link">Главная</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Игры</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Отзывы</a>
+              </li>
+            </ul>
+          </nav>
+          <adress class="header__contacts contacts">
+            <a href="tel:+78007003030" class="contacts__phone-header phone">8 800 700 30 30</a>
+            <div class="contacts__workhours"> График работы <!-- Есть ли смысл в этом контейнере?-->
+              <!-- <div class="contacts__week-schedule">
+                <img src="" alt="Рамка для времени работы" class="contacts__image">
+                <div class="contacts__workingdays">пн-вс: 09:00-20:00</div>
+                <div class="contacts__dinner">Обед: 14:00-14:30</div>
+              </div>  -->
+            </div>
+          </adress>
+        </header>
+        <!-- Конец головы документа -->
+        <!-- content hero -->
+        <div class="hero__content">
+          <section class="hero__text-section">
+            <h1 class="hero__title title-h1">Интеллектуальный вечер для шумной компании</h1>
+            <p class="hero__text">Игры на любой вкус</p>
+            <a href="#" class="hero__btn btn-detailed">ПОДРОБНЕЕ</a>
+          </section>
         </div>
-      </adress>
-    </header>
-    <!-- Конец головы документа -->
+      </div>
+    </section>
+    <!-- Конец секции hero -->
     <!--Начало основного содержимого  -->
     <main class="main-content">
-      <div class="description">
-        <h1 class="description__head">Интеллектуальный вечер для шумной компании</h1>
-        <p class="description__text">Игры на любой вкус</p>
-        <a href="#" class="description__btn btn-detailed">Подробнее</a>
-      </div>
-      <!-- Описание новинок недели -->
+    <!-- Описание новинок недели -->
       <section class="new-games">
-        <div class="new-games__title-wrap">
-          <h2 class="title new-games__title">Новинки недели</h2>          
-          <img src="" alt="Значок новый" class="new-games__icon">
+        <div class="container">
+          <div class="new-games__title-wrap">
+            <h2 class="new-games__title title-h2">Новинки недели          
+              <img src="./img/new-icon.png" alt="Значок новый" class="new-games__icon new-icon">
+            </h2>
+          </div>
+          <ul class="new-games__list">
+            <li class="new-games__item new-game">
+              <img src="./img/music-quiz_1.png" alt="Картинка для Музыкальной игры"  class="new-game__image">
+              <div class="new-game__description">
+                <h3 class="new-game__title-h3 title-h3 title-h3_black">Музыкальная игра</h3>
+                <ul class="new-game__list">
+                  <li class="new-game__item">
+                    <img src="./img/time-icon.png" alt="Значок времени" class="new-game__icon time-icon">
+                    <p class="new-game__duration">90 минут</p>
+                  </li>
+                  <li class="new-game__item">
+                    <img src="./img/questions-icon.png" alt="Значок вопрос-ответ" class="new-game__icon questions-icon">
+                    <p class="new-game__questions">70 вопросов</p>
+                  </li>
+                </ul>
+                <p class="new-game__text">
+                  Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
+                </p>
+                <a href="#" class="new-game__btn-view btn-view">Смотреть</a>
+              </div>
+            </li>
+            <li class="new-games__item new-game">
+              <img src="./img/music-quiz_2.png" alt="Картинка для Назад в 90-е"  class="new-game__image">
+              <div class="new-game__description">
+                <h3 class="new-game__title-h3 title-h3 title-h3_black">Назад в 90-е</h3>
+                <ul class="new-game__list">
+                  <li class="new-game__item">
+                    <img src="./img/time-icon.png" alt="Значок времени" class="new-game__icon time-icon">
+                    <p class="new-game__duration">90 минут</p>
+                  </li>
+                  <li class="new-game__item">
+                    <img src="./img/questions-icon.png" alt="Значок вопрос-ответ" class="new-game__icon questions-icon">
+                    <p class="new-game__questions">70 вопросов</p>
+                  </li>
+                </ul>
+                <p class="new-game__text">
+                  Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
+                </p>
+                <a href="#" class="new-game__btn-view btn-view btn-view_active ">Смотреть</a>
+              </div>
+            </li>
+            <li class="new-games__item new-game">
+              <img src="./img/music-quiz_3.png" alt="Картинка для IT-викторины"  class="new-game__image">
+              <div class="new-game__description">
+                <h3 class="new-game__title-h3 title-h3 title-h3_black">IT-викторина</h3>
+                <ul class="new-game__list">
+                  <li class="new-game__item">
+                    <img src="./img/time-icon.png" alt="Значок времени" class="new-game__icon time-icon">
+                    <p class="new-game__duration">90 минут</p>
+                  </li>
+                  <li class="new-game__item">
+                    <img src="./img/questions-icon.png" alt="Значок вопрос-ответ" class="new-game__icon questions-icon">
+                    <p class="new-game__questions">70 вопросов</p>
+                  </li>
+                </ul>
+                <p class="new-game__text">
+                  Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
+                </p>
+                <a href="#" class="new-game__btn-view btn-view">Смотреть</a>
+              </div>
+            </li>
+          </ul>
         </div>
-        <ul class="new-games__list">
-          <li class="new-games__item new-game">
-            <img src="" alt="Картинка для Музыкальной игры"  class="new-games__image ng-image">
-            <h3 class="new-game__title">Музыкальная игра</h3>
-            <ul class="new-game__rules rules__list">
-              <li class="new-game__item">
-                <img src="" alt="Значок времени" class="new-game__icon icon">
-                <p class="new-game__duration">90 минут</p>
-              </li>
-              <li class="new-game__item">
-                <img src="" alt="Значок вопрос-ответ" class="new-game__icon icon">
-                <p class="new-game__questions">70 вопросов</p>
-              </li>
-            </ul>
-            <p class="new-game__text">
-              Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
-            </p>
-            <a href="#" class="new-game__btn btn">Смотреть</a>
-          </li>
-          <li class="new-games__item new-game">
-            <img src="" alt="Картинка для игры Назад в 90-е"  class="new-games__image ng-image">
-            <h3 class="new-game__title">Назад в 90-е</h3>
-            <ul class="new-game__rules rules__list">
-              <li class="new-game__item">
-                <img src="" alt="Значок времени" class="new-game__icon icon">
-                <p class="new-games__duration">90 минут</p>
-              </li>
-              <li class="new-games__item">
-                <img src="" alt="Значок вопрос-ответ" class="new-game__icon icon">
-                <p class="new-games__questions">70 вопросов</p>
-              </li>
-            </ul>
-            <p class="new-games__text">
-              Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
-            </p>
-            <a href="#" class="new-game__btn btn btn_active">Смотреть</a>
-          </li>
-          <li class="new-games__item new-game">
-            <img src="" alt="Картинка для игры IT-викторина"  class="new-games__image ng-image">
-            <h3 class="new-game__title">IT-викторина</h3>
-            <ul class="new-game__rules rules__list">
-              <li class="new-game__item">
-                <img src="" alt="Значок времени" class="new-game__icon icon">
-                <p class="new-game__duration">90 минут</p>
-              </li>
-              <li class="new-game__item">
-                <img src="" alt="Значок вопрос-ответ" class="new-game__icon icon">
-                <p class="new-game__questions">70 вопросов</p>
-              </li>
-            </ul>
-            <p class="new-games__text">
-              Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
-            </p>
-            <a href="#" class="new-game__btn btn">Смотреть</a> 
-          </li>
-        </ul>
       </section>
       <!-- Описание прошедших игр -->
-      <div class="past-games">
-        <h2 class="title past-games__title">Прошедшие игры</h2>
-        <div class="past-games__item">
-          <img src="" alt="Фото прошедшей игры" class="past-games__image">
-          <div class="past-games__desription">
-            <p class="past-games__date">1 января</p>
-            <h3 class="past-games__title">Новогодний квиз</h3>
-            <p class="past-games__text">
-              Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех благ!
-            </p>
-          </div>
-        </div>
-        <div class="past-games__item">
-          <img src="" alt="Фото прошедшей игры" class="past-games__image">
-          <div class="past-games__desription">
-            <p class="past-games__date">8 марта</p>
-            <h3 class="past-games__title">Весенняя игра</h3>
-            <p class="past-games__text">
-              Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех благ!
-            </p>
-          </div>
-        </div>
+      <section class="past-games">
+        <div class="container">
+        <h2 class="title-h2 past-games__title-h2">Прошедшие игры</h2>
+        <ul class="past-games__list">
+          <li class="past-games__item">
+            <img src="./img/past-games_ny-quiz.png" alt="Фото прошедшей игры" class="past-games__image">
+            <div class="past-games__description">
+              <p class="past-games__date">1 января</p>
+              <h3 class="past-games__title-h3 title-h3">Новогодний квиз</h3>
+              <p class="past-games__text">
+                Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех благ!
+              </p>
+            </div>
+          </li>
+          <li class="past-games__item">
+            <img src="./img/past-games_spring-game.png" alt="Фото прошедшей игры" class="past-games__image">
+            <div class="past-games__description">
+              <p class="past-games__date">8 марта</p>
+              <h3 class="past-games__title-h3 title-h3">Весенняя игра</h3>
+              <p class="past-games__text">
+                Успевайте забронировать даты. Пока еще есть места на март. Удачи и всех благ!
+              </p>
+            </div>
+          </li>
+        </ul>
         <div class="paginator">
           <p class="paginator__display">Страница 1 из 7</p>
-          <ul class="paginator__pages">
+          <ul class="paginator__list">
             <li class="paginator__item">
-              <a href="#" class="paginator__link-active">1</a>
+              <a href="#" class="paginator__link">1</a>
             </li>
             <li class="paginator__item">
               <a href="#" class="paginator__link">2</a>
@@ -158,70 +179,74 @@
             </li>
           </ul>
         </div>
-        <div class="about-us">
-          <img src="" alt="Фото организаторов" class="about-us__image">
-          <div class="about-us__info">
-            <h2 class="about-us__title">О нас</h2>
-            <p class="about-us__text">
-              Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев 
-              более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить 
-              навык публичных выступлений в домашних условиях.
-            </p>
-            <a href="#" class="about-us__btn btn-detailed btn-detailed_purple">Подробнее</a>
-          </div>
         </div>
-      </div>
+      </section>
+      <!-- Начало секции "О нас" -->
+      <section class="about-us">
+        <div class="container">
+          <div class="about-us_wrapper">
+            <img src="./img/about-us_photo.png" alt="Фото организаторов" class="about-us__image">
+            <div class="about-us__info">
+              <h2 class="about-us__title-h2 title-h2">О нас</h2>
+              <div class="about-us__text">
+                <p>
+                  Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько 
+                  абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору 
+                  отточить навык публичных выступлений в домашних условиях.  
+                </p>
+              </div>
+              <a href="#" class="about-us__btn btn-detailed btn-detailed_purple">Подробнее</a>
+            </div>
+          </div>
+          <div class="horisontal-line"></div>
+        </div>
+      </section>
+      <!-- Конец секции "О нас" -->
     </main>
     <!-- Конец основного содержимого -->
     <!-- <hr class="separating-line"> Полагаю, лучше сделать её через border CSS   -->
     <!-- Начало "подвала" -->
-     <footer class="footer">
-      <a href="#" class="footer__link link-main">
-        <img src="" alt="Логотип сайта" class="footer__logo logo">
-      </a>
-      <nav class="footer__menu menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__link">Главная</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Игры</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Отзывы</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="social-media">
-        <ul class="social-meadia__list">
-          <li class="social-media__item">
-            <a href="" class="social-media__link">
-              <img src="" alt="Значок Телеграма" class="social-media__icon sm-icon">
-            </a>
-          </li>
-          <li class="social-media__item">
-            <a href="" class="social-media__link">
-              <img src="" alt="Значок Вконтакте" class="social-media__icon sm-icon">
-            </a>
-          </li>
-          <li class="social-media__item">
-            <a href="" class="social-media__link">
-              <img src="" alt="Значок Фейсбука" class="social-media__icon sm-icon">
-            </a>
-          </li>
-          <li class="social-media__item">
-            <a href="" class="social-media__link">
-              <img src="" alt="Значок Инстаграмма" class="social-media__icon sm-icon">
-            </a>
-          </li>
-        </ul>
+    <footer class="footer-container">
+      <div class="container">
+        <div class="footer">
+          <a href="#" class="footer__link-main link-main">
+            <img src="./img/quiz-box.png" alt="Логотип сайта" class="footer__logo logo">
+          </a>
+          <nav class="footer__menu menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#" class="menu__link">Главная</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Игры</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Отзывы</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="social-media__list social-media ">
+            <li class="social-media__item sm-icon-telegrem">
+              <a href="" class="social-media__link"></a>
+            </li>
+            <li class="social-media__item sm-icon-vk">
+                <a href="" class="social-media__link"></a>
+            </li>
+            <li class="social-media__item sm-icon-facebook">
+                <a href="" class="social-media__link"></a>
+            </li>
+            <li class="social-media__item sm-icon-insta">
+              <a href="" class="social-media__link"></a>
+            </li>
+          </ul>
+          <adress class="footer__contacts contacts">
+            <div class="contacts__phone-info">Бесплатный звонок по России</div>
+            <a href="tel:+78007003030" class="contacts__phone-footer phone">8 800 700 30 30</a>
+          </adress>
+        </div>
       </div>
-      <adress class="footer__contacts contacts">
-        <p class="contacts__phone-info">Бесплатный звонок по России</p>
-        <a href="tel:+78007003030" class="contacts__phone-footer phone">8 800 700 30 30</a>
-      </adress>
-     </footer>
-     <!-- Конец "подвала" -->
+    </footer>
+      <!-- Конец "подвала" -->
   </div>
 </body>
 </html>
