Исправил путь к логотипу

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Начало головы документа -->
         <header class="header">
           <a href="/" class="header__link-main link-main">
-            <img src="/img/quiz-box.png" alt="Логотип сайта" class="link-main__logo logo">
+            <img src="./img/quiz-box.png" alt="Логотип сайта" class="link-main__logo logo">
           </a>
           <nav class="header__menu menu">
             <ul class="menu__list">
