--- a/offers.html
+++ b/offers.html
@@ -14,40 +14,47 @@
         <div class="container top-line__container">
           <div class="header">
             <div class="header__left">
-              <a href="./index.html" class="logo">
+              <a href="./main.html" class="logo">
                 <img src="./img/offers_page/quiz-box.png" alt="Логотип сайта" class="logo__img">
               </a>
               <nav class="menu">
                 <ul class="menu__list">
                   <li class="menu__item">
-                    <a href="./index.html" class="menu__link">Главная</a>
+                    <a href="./main.html" class="menu__link">Главная</a>
                   </li>
                   <li class="menu__item">
                     <a href="./offers.html" class="menu__link">Игры</a>
                   </li>
                   <li class="menu__item">
-                    <a href="" class="menu__link">Отзывы</a>
+                    <a href="./reviews.html" class="menu__link">Отзывы</a>
                   </li>
                 </ul>
               </nav>
             </div>
-            <adress class="contacts">
+            <adress class="contacts header__right">
               <a href="tel:+78007003030" class="phone">8 800 700 30 30</a>
-              <div class="contacts__schedule">График работы</div>
+              <div class="contacts__schedule_wrap">
+                <div class="contacts__schedule"> График работы</div>
+                <div class="contacts__menu dropdown">
+                  <div class="dropdown__days">пн-вс: 09:00-20:00</div>
+                  <div class="dropdown__dinner">Обед: 14:00-14:30</div>
+                  <!-- <div>треугольник</div> -->
+                </div>
+              </div>
             </adress>
           </div>
           <h1 class="top-line__title title">Игры</h1>
           <nav class="breadcrumbs">
             <ul class="breadcrumbs__list">
               <li class="breadcrumbs__item"> 
-                <a href="" class="breadcrumbs__link">Главная</a>
+                <a href="./main.html" class="breadcrumbs__link">Главная</a>
               </li>
               <li class="breadcrumbs__item breadcrumbs__item_active">
-                <a href="" class="breadcrumbs__link">Услуги</a>
+                <a href="./offers.html" class="breadcrumbs__link">Услуги</a>
               </li>
             </ul>
           </nav>
-      </div>
+        </div>
       </section>
       <main class="page-content">
         <section class="games">
@@ -165,36 +172,36 @@
       <div class="container">
         <div class="footer">
           <div class="footer__left">
-            <a href="./index.html" class="logo footer__logo">
+            <a href="./main.html" class="logo footer__logo">
               <img src="./img/main_page/quiz-box.png" alt="Логотип сайта" class="logo__img">
             </a>
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="./index.html" class="menu__link">Главная</a>
+                  <a href="./main.html" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
                   <a href="./offers.html" class="menu__link">Игры</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
           </div>
           <div class="footer__right">
             <ul class="social-media__list social-media ">
-              <li class="social-media__item sm-icon-telegram">
-                <a href="" class="social-media__link"></a>
+              <li class="social-media__item ">
+                <a href="" class="social-media__link sm-icon-telegram"></a>
               </li>
-              <li class="social-media__item sm-icon-vk">
-                  <a href="" class="social-media__link"></a>
+              <li class="social-media__item ">
+                  <a href="" class="social-media__link sm-icon-vk"></a>
               </li>
-              <li class="social-media__item sm-icon-facebook">
-                  <a href="" class="social-media__link"></a>
+              <li class="social-media__item ">
+                  <a href="" class="social-media__link sm-icon-facebook"></a>
               </li>
-              <li class="social-media__item sm-icon-insta">
-                <a href="" class="social-media__link"></a>
+              <li class="social-media__item ">
+                <a href="" class="social-media__link sm-icon-insta"></a>
               </li>
             </ul>
             <adress class="footer__contacts contacts">
